Made it flexboxy everywhere

--- a/static/global.css
+++ b/static/global.css
@@ -58,7 +58,24 @@ h1 {
 
 .book-details-area {
     width: 45%;
+    
 }
+
+.label-input-wrapper, .serial-number-input-wrapper {
+    display: flex;  
+    margin-bottom: 30px;
+    align-items: center;
+}
+
+.label-input-wrapper {
+    justify-content: space-between;
+}
+
+.serial-number-input-wrapper {
+    justify-content: flex-end;
+}
+
+
 
 #or-area {
     width: 10%;
@@ -85,6 +102,7 @@ h1 {
 
 .user-input-area {
     text-align: left;
+    margin-top: 50px;
 }
 
 a {
@@ -120,14 +138,14 @@ form {
 }
 
 .input-box {
-    float: right;
     position: relative;
     right: 5%;
-    clear: right;
     max-width: 100%;
+    margin-bottom: 30px;
 }
 
 .book-details-block {
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 100px;
 }
