--- a/static/global.css
+++ b/static/global.css
@@ -24,13 +24,20 @@ h1 {
 }
 
 .search-element-container {
-    float: left;
     text-align: left;
-    width: 28%;
-    border-style: dotted;
-    border-color: black;
-    margin: 0 2.5% ;
+    width: 30%;
+    margin: 8px;
     box-sizing: border-box;
+}
+
+.search-element-container input[type=text] {
+    padding: 10px;
+    float: none;
+    display:block;
+    width:100%;
+    border: 1px solid #ccc;
+    margin: 0px;
+    font-size: 16px;
 }
 
 .button-container {
@@ -116,6 +123,7 @@ a {
 
 form {
     text-align: left;
+    margin-block-end: 0;
 }
 
 #reader-info {
