--- a/static/global.css
+++ b/static/global.css
@@ -229,6 +229,18 @@ form {
 	float: right;
 }
 
+.serial-no-container {
+    text-align: left;
+    width: 80%;
+    margin: 8px;
+    box-sizing: border-box;
+}
 
-
-
+.serial-no-container input[type=text] {
+    padding: 10px;
+    display:block;
+    width:100%;
+    border: 1px solid #ccc;
+    margin: 0px;
+    font-size: 16px;
+}
