--- a/static/global.css
+++ b/static/global.css
@@ -183,12 +183,6 @@ form {
     vertical-align: top;
 }
 
-.book-info input[type="submit"] {
-    font-size:12px;
-    display:inline-block;
-    padding: 16px;
-}
-
 .book-cover {
     display: inline-block;
 }
@@ -227,7 +221,7 @@ form {
     font-size: 16px;
 }
 
-.add-form input[type="submit"], .add-user-form input[type="submit"] {
+input[type="submit"]  {
     background-color: whitesmoke;
 	border: none;
 	color: #424242;
@@ -235,45 +229,46 @@ form {
 	text-align: center;
 	text-decoration: none;
 	font-size: 14px;
-	margin: 4px 2px;
 	cursor: pointer;
 	border: 1px solid  #424242;
 	float: right;
+}
+
+.add-form input[type="submit"], .add-user-form input[type="submit"]{
+    margin: 4px 2px;
 }
 
 .checkout-block input[type="submit"] {
-    background-color: whitesmoke;
-	border: none;
-	color: #424242;
-	padding: 12px 44px;
-	text-align: center;
-	text-decoration: none;
-	font-size: 14px;
 	margin: 4px 0px;
-	cursor: pointer;
-	border: 1px solid  #424242;
-	float: right;
 }
 
-.side-by-side {
-    margin:0;
+.book-info input[type="submit"] {
+    font-size:12px;
+    display:inline-block;
+    padding: 16px;
 }
 
 .add-form{
-    width: calc(50% - 60px);
-    float: left;
-    overflow: hidden;
     padding: 20px;
-    margin: 30px;
-    height: 610px;
+    margin: 30px 10px;
+    margin-top: 20px;
+    height: 547px;
     background-color: #ededed;
-    border: 1px solid  #424242;
+    border: 1px solid  #d4d4d4;
+}
+
+#add-copy-title-author {
+    height: 290px;
+}
+
+#add-copy-isbn {
+    height: 175px;
 }
 
 .add-user-form{
-    width: calc(100% - 60px);
+    width: calc(100% - 40px);
     padding: 20px;
-    margin: 20px;
+    margin: 10px 10px;
     background-color: #ededed;
 }
 
