--- a/static/global.css
+++ b/static/global.css
@@ -144,10 +144,6 @@ form {
     margin-block-end: 0;
 }
 
-#reader-info {
-    margin: 30px;
-}
-
 .see-available-copies-button {
     float: right;
 }
@@ -321,10 +317,17 @@ a {
     }
 }
 
-.action-heading {
+.action-heading, .details {
     text-align: center;
     font-size: 16px;
     font-weight: bold;
     vertical-align: middle;
+}
+
+.action-heading {
     color: black;
+}
+
+.details {
+    color: grey;
 }
