--- a/static/global.css
+++ b/static/global.css
@@ -331,3 +331,17 @@ a {
 .details {
     color: grey;
 }
+
+#all_button{
+    float: right;
+    background-color: whitesmoke;
+	border: none;
+	color: #424242;
+	padding: 12px 44px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 14px;
+	cursor: pointer;
+    border: 1px solid  #424242;
+}
+
