--- a/static/global.css
+++ b/static/global.css
@@ -134,11 +134,6 @@ a {
     color: rgb(88, 57, 21);
 }
 
-.librarian-form {
-    text-align: left;
-    padding: 30px;
-}
-
 form {
     text-align: left;
     margin-block-end: 0;
@@ -206,7 +201,7 @@ form {
     text-align: right;
 }
 
-.add-form input[type="text"], .add-user-form input[type="text"] {
+input[type="text"] {
     padding: 10px;
     margin: 10px 10px;
     float: none;
@@ -330,4 +325,35 @@ a {
 
 .details {
     color: grey;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.column {
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px;
+}
+
+.column .home-block {
+    margin: 10px 10px;
+    padding: 20px;
+    width: calc(100% - 15px);
+    height: 160px;
+    background-color:#ededed;
+    vertical-align: middle;
+}
+
+.user-lookup-element {
+    float: left;
+    margin: 10px 10px;
+}
+
+#lookup-search {
+    margin-right: 0;
+    width: 180px !important;
 }
