styled librarian home search buttons

--- a/static/global.css
+++ b/static/global.css
@@ -94,7 +94,7 @@ h1, h2 {
 }
 
 .block, .checkout-block, .centred-block {
-    margin: 15px;
+    margin: 20px;
     background-color: #ededed;
 }
 
@@ -132,11 +132,6 @@ h1, h2 {
 
 a {
     color: rgb(88, 57, 21);
-}
-
-form {
-    text-align: left;
-    margin-block-end: 0;
 }
 
 .see-available-copies-button {
@@ -348,16 +343,26 @@ a {
     vertical-align: middle;
 }
 
-.user-lookup-element {
-    float: left;
-    margin: 10px 10px;
+#reader-name-input input[type="text"]{
+    margin-right: 0;
+    width: 120px !important;
 }
 
-#lookup-search {
-    margin-right: 0;
-    width: 180px !important;
+#reader-name-dropdown {
+    width: 200px;
 }
-#all_button{
+
+.lookup-search, .lookup-search #reader-name-input {
+    margin: 0;
+    float: left;
+}
+
+.user-lookup-element {
+    float: left;
+    margin-left: 2%;
+}
+
+#all_button, .search-result-more-info-button{
     float: right;
     background-color: whitesmoke;
 	border: none;
@@ -368,5 +373,5 @@ a {
 	font-size: 14px;
 	cursor: pointer;
     border: 1px solid  #424242;
+    margin-right: 18px;
 }
-
