--- a/static/global.css
+++ b/static/global.css
@@ -394,3 +394,12 @@ a {
     color: black;
     font-weight: normal;
 }
+
+.reserve-block {
+    height:150px;
+    width:50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    background-color: #ededed;
+    padding: 30px;
+}
